tests/sintax-semanth/should_fail/test12Wrong.tds
//This test should fail because program block is not closed
program
begin
	integer fun()
		begin
			{insert code here}
		end
	void print()
		begin
			//insert code here
		end
	begin
	end